去除 debhelper 的版本限制
Change-Id: I0022d0cdc24c4abd96dad4db494296c65d71cba5

--- a/debian/control
+++ b/debian/control
@@ -2,7 +2,7 @@ Source: golang-github-linuxdeepin-go-x11-client
 Section: devel
 Priority: extra
 Maintainer: Deepin Packages Builder <packages@deepin.com>
-Build-Depends: debhelper (>= 10),
+Build-Depends: debhelper,
                dh-golang,
                golang-any,
                golang-gopkg-check.v1-dev,
