--- a/debian/control
+++ b/debian/control
@@ -2,7 +2,7 @@ Source: golang-github-linuxdeepin-go-x11-client
 Section: devel
 Priority: extra
 Maintainer: Deepin Packages Builder <packages@deepin.com>
-Build-Depends: debhelper,
+Build-Depends: debhelper (>= 10),
                dh-golang,
                golang-any,
                golang-gopkg-check.v1-dev,
@@ -13,9 +13,10 @@ XS-Go-Import-Path: github.com/linuxdeepin/go-x11-client
 Testsuite: autopkgtest-pkg-go
 
 Package: golang-github-linuxdeepin-go-x11-client-dev
-Architecture: all
+Architecture: any
 Depends: ${shlibs:Depends},
          ${misc:Depends},
          golang-github-gavv-monotime-dev,
          golang-gopkg-check.v1-dev
-Description: mirrored from https://cr.deepin.io/#/admin/projects/go-x11-client 
+Description: deepin go x11 client
+ mirrored from https://cr.deepin.io/#/admin/projects/go-x11-client
