--- a/debian/control
+++ b/debian/control
@@ -6,7 +6,8 @@ Build-Depends: debhelper (>= 10),
                dh-golang,
                golang-any,
                golang-gopkg-check.v1-dev,
-               golang-golang-x-text-dev (>=0.0~git20161013)
+               golang-golang-x-text-dev (>=0.0~git20161013),
+               golang-github-stretchr-testify-dev (>=1.1.4)
 Standards-Version: 4.0.0
 Homepage: https://github.com/linuxdeepin/go-x11-client
 XS-Go-Import-Path: github.com/linuxdeepin/go-x11-client
