chore(deb): set env DH_GOLANG_EXCLUDES
Change-Id: I16f1e28f8f77d2921f3c6b49356c80fbc6770e60

--- a/debian/rules
+++ b/debian/rules
@@ -1,5 +1,7 @@
 #!/usr/bin/make -f
 
+export DH_GOLANG_EXCLUDES := tools/gen util/tool/gen-keysymdef
+
 %:
 	dh $@ --buildsystem=golang --with=golang
 
@@ -9,6 +11,3 @@ override_dh_auto_clean:
 	dh_auto_clean --
 	rm -fr obj-x86_64-linux-gnu
 
-override_dh_auto_install:
-	dh_auto_install --
-	rm -r debian/golang-github-linuxdeepin-go-x11-client-dev/usr/bin
