chore: add makefile for sw_64
Change-Id: I9f827a0acc00b18b09816a79b60f47a4e88ac69b

--- a/debian/rules
+++ b/debian/rules
@@ -2,9 +2,13 @@
 
 export DH_GOLANG_EXCLUDES := tools/gen util/tool/gen-keysymdef
 
+ifeq ($(DEB_BUILD_ARCH),sw_64)
+%:
+	dh $@
+else
 %:
 	dh $@ --buildsystem=golang --with=golang
-
+endif
 
 
 override_dh_auto_clean:
