fix: 修复打包报错
修复「failed to initialize build cache at /nonexistent/.cache/go-build:
mkdir /nonexistent: permission denied」，将 GOCACHE 设置为 /tmp/gocache

Log: 修复打包报错
Change-Id: I23248562b79fd0d8bd5aa80a22287daa9b70d01c

--- a/debian/rules
+++ b/debian/rules
@@ -1,5 +1,6 @@
 #!/usr/bin/make -f
 
+export GOCACHE := /tmp/gocache
 export DH_GOLANG_EXCLUDES := tools/gen util/tool/gen-keysymdef
 
 ifeq ($(DEB_BUILD_ARCH),sw_64)
