chore(CI): add OBS workflows
add OBS workflows and modify PKGBUILD support OBS build

log:

--- a/archlinux/PKGBUILD
+++ b/archlinux/PKGBUILD
@@ -2,6 +2,10 @@
 pkgname=golang-github-linuxdeepin-go-x11-client-git
 pkgver=0.6.8.r2.g9476531
 pkgrel=1
+sourcename=go-x11-client
+pkgsourcename="golang-github-linuxdeepin-go-x11-client"
+sourcetars=("$pkgsourcename"_"$pkgver".tar.xz)
+sourcedir="$sourcename"
 pkgdesc='X11 protocol go language binding'
 arch=('any')
 url="https://github.com/linuxdeepin/go-x11-client"
@@ -12,11 +16,11 @@ groups=('deepin-git')
 depends=('golang-golang-x-text')
 makedepends=('git' 'go' 'xorg-server-xvfb' 'golang-github-stretchr-testify' 'golang-gopkg-check.v1' 'golang-gopkg-yaml.v3')
 checkdepends=('xorg-server-xvfb' 'golang-github-stretchr-testify' 'golang-gopkg-check.v1' 'golang-gopkg-yaml.v3' 'git')
-source=('source.tar.gz')
+source=("${sourcetars[@]}")
 sha512sums=('SKIP')
 
 prepare() {
-    cd $deepin_source_name
+  cd $sourcedir
   rm -rf tools
 }
 
@@ -24,13 +28,13 @@ check() {
   export GOPATH="$srcdir/build:/usr/share/gocode"
   export GO111MODULE=off
   mkdir -p "$srcdir"/build/src/github.com/linuxdeepin
-  cp -a "$srcdir/$deepin_source_name" "$srcdir"/build/src/github.com/linuxdeepin/go-x11-client
+  cp -a "$srcdir/$sourcedir" "$srcdir"/build/src/github.com/linuxdeepin/go-x11-client
   cd "$srcdir"/build/src/github.com/linuxdeepin/go-x11-client
   xvfb-run go test -v $(go list ./...)
 }
 
 package() {
   mkdir -p "$pkgdir"/usr/share/gocode/src/github.com/linuxdeepin
-  cp -a "$srcdir/$deepin_source_name" "$pkgdir"/usr/share/gocode/src/github.com/linuxdeepin/go-x11-client
+  cp -a "$srcdir/$sourcedir" "$pkgdir"/usr/share/gocode/src/github.com/linuxdeepin/go-x11-client
   rm -r "$pkgdir"/usr/share/gocode/src/github.com/linuxdeepin/go-x11-client/debian
 }
